# nacelle

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE.txt  README.md  book.toml  build-all.sh  config.toml  config.yaml  docfx.json  run-compio-epoll.sh  run-compio-iouring.sh  run-kimojio-epoll.sh  run-kimojio-iocp.ps1  run-kimojio-iouring.sh  run-monoio.sh  run-tokio.ps1  run-tokio.sh  rust-toolchain.toml
.cargo/: config.toml
.codex/plans/: 2026-06-16-nacelle-tcp-module-refactor-plan.md
.codex/skills/development/: SKILL.md
.codex/skills/nacelle-development/: SKILL.md
.codex/skills/nacelle-planning/: SKILL.md
.codex/skills/planning/: SKILL.md
.codex/skills/skills/project-development/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: performance.instructions.md  rust.instructions.md  security.instructions.md
.github/scripts/: loom.sh  miri.sh  panic-abort.sh  test-stable.sh  tsan.sh
.github/skills/planning/: SKILL.md
.github/workflows/: ci.yml  mdbook.yml
benches/: critical_paths.rs
docs/: PROTOCOL.md  SUMMARY.md  api-stability.md  architecture.md  http-hardening.md  index.md  operations.md  performance-tuning.md  production-checklist.md  production-configuration.md  production_readiness_plan_2026-06-05.md  security-scanning.md  stress-testing.md  toc.yml  usage.md
docs/book-src/how-to/: compare-performance.md  configure-production.md  harden-http.md  run-stress-tests.md  security-scanning.md
docs/book-src/reference/: api-stability.md  http-hardening.md  production-configuration.md  protocol.md
docs/book-src/topics/: architecture.md  operations.md  performance-model.md  runtime-limits.md
docs/book-src/tutorials/: stress-harness.md
docs/how-to/: compare-performance.md  configure-production.md  harden-http.md  run-stress-tests.md  security-scanning.md
docs/internal/: 2026-06-09-serve-api-and-runtime-gaps-plan.md  assessment_2026-06-05.md  crate-split-plan-2026-06-06.md  documentation-book-plan-2026-06-07.md  edge-readiness-plan-2026-06-06.md  performance-and-edge-next-plan-2026-06-07.md  production-checklist.md
docs/reference/: api-stability.md  http-hardening.md  nacelle-codec.md  production-configuration.md  protocol.md  rust-api.md
docs/theme/: nacelle.css
docs/topics/: architecture.md  documentation.md  operations.md  performance-model.md  runtime-limits.md
docs/tutorials/: getting-started.md  raw-tcp-tls.md  stress-harness.md  tcp-tls.md
examples/: run-stress-test-rtt.sh  run-stress-test.ps1  run-stress-test.sh
examples/nacelle-examples/: Cargo.toml
examples/nacelle-examples/benches/: critical_paths.rs
examples/nacelle-proxy/: Cargo.toml  README.md  config.example.toml
examples/nacelle-proxy/benches/: protocol_efficiency.rs  simple_rtt.rs
examples/nacelle-proxy/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  reload.rs  service.rs  wire.rs
examples/nacelle-reference-protocol/: Cargo.toml
examples/nacelle-reference-protocol/src/: lib.rs
examples/nacelle-reference-protocol/tests/: properties.rs
examples/nacelle-stress-common/: Cargo.toml
examples/nacelle-stress-common/src/: lib.rs
examples/nacelle-stress-server/: Cargo.toml  config.example.toml
examples/nacelle-stress-server/configs/: tcp-low-memory.toml  tcp-tls.toml  tcp.toml
examples/nacelle-stress-server/src/: main.rs  shared.rs
examples/nacelle-stress-test/: Cargo.toml
examples/nacelle-stress-test/src/: main.rs
nacelle/: Cargo.toml  build.rs
nacelle-codec/: Cargo.toml  README.md
nacelle-codec/benches/: framed_comparison.rs
nacelle-codec/src/: encoder.rs  length_delimited.rs  lib.rs
nacelle-codec/src/decoder/: mod.rs
nacelle-codec/src/io/: mod.rs  reader.rs  rotating.rs  tests.rs  writer.rs
nacelle-codec/tests/: properties.rs
nacelle-core/: Cargo.toml
nacelle-core/src/: config.rs  error.rs  handler.rs  lib.rs  lifecycle.rs  limits.rs  peer_rate.rs  pipeline.rs  request.rs  response.rs  runtime.rs  telemetry.rs  tls.rs  tower.rs
nacelle-core/src/telemetry/: attributes.rs  mod.rs  sink.rs
nacelle-http/: Cargo.toml
nacelle-http/src/: encoder.rs  lib.rs  limits.rs  pipeline.rs  policy.rs  rate_limit.rs  server.rs
nacelle-stress-server/: Cargo.toml  config.example.toml  config.example.yaml  config.yaml
nacelle-stress-server/configs/: raw-tcp-tls.toml  raw-tcp.toml
nacelle-stress-server/src/: main.rs  shared.rs
nacelle-stress-test/: Cargo.toml
nacelle-stress-test/src/: main.rs
nacelle-tcp/: Cargo.toml
nacelle-tcp/benches/: response_delivery.rs  telemetry_paths.rs
nacelle-tcp/src/: config.rs  connection.rs  lib.rs  limits.rs  options.rs  protocol.rs  runtime.rs  serial_server.rs  server.rs  telemetry.rs
nacelle-tcp/src/connection/: body.rs  framing.rs  io.rs  metrics.rs  request.rs  response.rs  tests.rs
nacelle-tcp/src/runtime/: common.rs  local.rs  openssl.rs  openssl_optional.rs  openssl_tests.rs  rustls.rs  rustls_tests.rs  tcp.rs  unix.rs
nacelle-tcp/src/server/: listeners.rs
nacelle/benches/: critical_paths.rs
nacelle/examples/: app_core.rs  dual_echo.rs  echo.rs  http_echo.rs  memory_guard.rs  tcp_memory_guard.rs  tls_echo.rs  tls_http_echo.rs
nacelle/src/: app.rs  config.rs  connection.rs  error.rs  frame.rs  handler.rs  host.rs  http_server.rs  lib.rs  lifecycle.rs  limits.rs  protocol.rs  reference_protocol.rs  request.rs  response.rs  runtime.rs  server.rs  telemetry.rs  thread_per_core.rs  tls.rs  tower.rs  util.rs
nacelle/src/runtime/: mod.rs
nacelle/src/runtime/compio_rt/: mod.rs
nacelle/src/runtime/kimojio_rt/: mod.rs
nacelle/src/runtime/monoio_rt/: mod.rs
nacelle/src/runtime/tokio_rt/: mod.rs
nacelle/tests/: facade_namespaces.rs  protocol_fuzz.rs
scripts/: build-book.ps1  build-docs.ps1  lint.ps1  performance-common.ps1  profile-linux.sh  publish-crates.ps1  run-native-performance.ps1  validate-all.ps1  validate-all.sh  validate-production-readiness.ps1  validate-production-readiness.sh
src/: config.rs  connection.rs  error.rs  frame.rs  handler.rs  lib.rs  metrics.rs  protocol.rs  registry.rs  request.rs  runtime.rs  server.rs  util.rs
(+3 files in other folders)
