[workspace]
members = [
    "nacelle-core",
    "nacelle-tcp",
    "nacelle-http",
    "nacelle",
    "examples/nacelle-stress-common",
    "examples/nacelle-stress-test",
    "examples/nacelle-stress-server",
]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/microsoft/nacelle"
homepage = "https://github.com/microsoft/nacelle"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
