[package]
name = "nacelle-core"
version = "0.2.1"
edition = "2024"
rust-version.workspace = true
description = "Shared request, response, body, limits, lifecycle, telemetry, and TLS primitives for Nacelle."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["networking", "tokio", "async"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
error-hints = []
http-types = ["dep:http"]
tls = []
rustls = ["tls", "dep:pem", "dep:rustls"]
openssl = ["tls", "dep:openssl"]
openssl-vendored = ["openssl", "openssl/vendored"]
tls-self-signed = ["rustls", "dep:rcgen"]
otel = ["dep:opentelemetry"]
# Deprecated no-op: tokio-util is now an unconditional dependency. Retained so
# downstream crates enabling this feature continue to build. Remove in a future
# major release.
tokio-util = []
tower = ["dep:tower"]

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
pem = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util"], optional = true }
tracing = { workspace = true }
