[package]
name = "nacelle-core"
version = "0.3.0-beta.3"
edition = "2024"
rust-version.workspace = true
description = "Shared pipeline, body, limits, lifecycle, telemetry, and TLS primitives for Nacelle."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["networking", "tokio", "async"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
error-hints = []
tls = []
phase-timing = []

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
metrics-util = { workspace = true }
