[package]
name = "nacelle-http"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
description = "Hyper HTTP/1 transport and HTTP edge policy runtime for Nacelle streaming handlers."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["networking", "tokio", "http"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
tls = []
rustls = ["tls", "dep:rustls", "dep:tokio-rustls", "nacelle-core/rustls"]
tls-self-signed = ["rustls", "nacelle-core/tls-self-signed"]

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["server", "tokio"] }
nacelle-core = { workspace = true, features = ["http-types"] }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { workspace = true, optional = true }
tracing = { workspace = true }
