[package]
name = "nacelle-stress-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tokio-server"
path = "src/bin/stress-tokio.rs"

[features]
default = []

[dependencies]
nacelle = { path = "../nacelle", features = ["raw_tcp"], default-features = false }
bytes = "1.10.1"
mimalloc = { version = "0.1", default-features = false }
libmimalloc-sys = { version = "0.1", features = ["extended"], default-features = false }
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
