[package]
name = "nacelle-stress-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nacelle-stress-test"
path = "src/main.rs"

[dependencies]
nacelle = { path = "../nacelle", features = ["tcp", "runtime"] }
bytes = "1.10.1"
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1.47.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

