[package]
name = "nacelle-tcp"
version = "0.2.1"
edition = "2024"
rust-version.workspace = true
description = "TCP transport and protocol runtime for Nacelle streaming handlers."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["networking", "tokio", "tcp"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
tls = []
rustls = ["tls", "dep:rustls", "dep:tokio-rustls", "nacelle-core/rustls"]
openssl = ["tls", "dep:openssl", "dep:tokio-openssl", "nacelle-core/openssl"]
openssl-vendored = ["openssl", "openssl/vendored", "nacelle-core/openssl-vendored"]
tls-self-signed = ["rustls", "nacelle-core/tls-self-signed"]
otel = ["dep:opentelemetry", "nacelle-core/otel"]

[dependencies]
bytes = { workspace = true }
nacelle-core = { workspace = true }
opentelemetry = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-openssl = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
tracing = { workspace = true }
