[package]
name = "nacelle-tcp"
version = "0.3.0-beta.3"
edition = "2024"
rust-version.workspace = true
description = "TCP transport and protocol runtime for Nacelle streaming handlers."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["networking", "tokio", "tcp"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
buffer-rotation = ["nacelle-codec/buffer-rotation"]
tls = []
rustls = ["tls", "dep:nacelle-rustls", "dep:rustls", "dep:tokio-rustls", "nacelle-core/tls"]
openssl = ["tls", "dep:nacelle-openssl", "dep:openssl", "dep:tokio-openssl", "nacelle-core/tls"]
openssl-vendored = ["openssl", "openssl/vendored", "nacelle-openssl/vendored"]
tls-self-signed = ["rustls", "nacelle-rustls/self-signed"]
phase-timing = ["nacelle-core/phase-timing"]

[dependencies]
bytes = { workspace = true }
nacelle-codec = { workspace = true }
nacelle-core = { workspace = true }
nacelle-openssl = { workspace = true, optional = true }
nacelle-rustls = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-openssl = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "telemetry_paths"
harness = false

[[bench]]
name = "response_delivery"
harness = false
