[package]
name = "nacelle"
version = "0.3.0-beta.1"
edition = "2024"
rust-version.workspace = true
description = "Convenience crate for Nacelle streaming handlers and transport APIs."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["networking", "tokio", "http", "tcp"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["tcp"]
tcp = ["dep:nacelle-tcp"]
buffer-rotation = ["nacelle-tcp?/buffer-rotation"]
error-hints = ["nacelle-core/error-hints"]
http = ["dep:nacelle-http"]
tls = ["nacelle-core/tls", "nacelle-http?/tls", "nacelle-tcp?/tls"]
rustls = ["tls", "nacelle-core/rustls", "nacelle-http?/rustls", "nacelle-tcp?/rustls"]
openssl = ["tls", "nacelle-core/openssl", "nacelle-tcp?/openssl"]
openssl-vendored = ["openssl", "nacelle-core/openssl-vendored", "nacelle-tcp?/openssl-vendored"]
tls-self-signed = ["rustls", "nacelle-core/tls-self-signed", "nacelle-http?/tls-self-signed", "nacelle-tcp?/tls-self-signed"]
otel = ["nacelle-core/otel", "nacelle-tcp?/otel"]
bench = []
fuzzing = []

[dependencies]
bytes = { workspace = true }
core_affinity = { workspace = true }
nacelle-codec = { workspace = true }
nacelle-core = { workspace = true }
nacelle-http = { workspace = true, optional = true }
nacelle-tcp = { workspace = true, optional = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
