[package]
name = "nacelle-stress-common"
version = "0.2.0"
edition = "2024"
description = "Shared utilities for Nacelle stress examples."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
bytes = "1.10.1"
nacelle = { path = "../../nacelle", features = ["reference_protocol"] }
tokio = { version = "1.47.1", features = ["io-util", "net"] }
