[package]
name = "nacelle-stress-common"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
description = "Shared utilities for Nacelle stress examples."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
bytes = { workspace = true }
nacelle = { workspace = true, features = ["reference_protocol"] }
tokio = { workspace = true, features = ["io-util", "net"] }
