[package]
name = "nacelle-stress-server"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
description = "Stress server binary for exercising Nacelle TCP throughput and runtime limits."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false
keywords = ["networking", "tokio", "benchmark"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["tls-self-signed", "otel"]
tls = ["nacelle/tls", "dep:tokio-rustls"]
tls-self-signed = ["tls", "nacelle/tls-self-signed"]
otel = ["nacelle/otel", "dep:opentelemetry", "dep:opentelemetry_sdk"]

[dependencies]
nacelle = { workspace = true, features = ["reference_protocol"] }
nacelle-stress-common = { workspace = true }
bytes = { workspace = true }
mimalloc = { workspace = true }
libmimalloc-sys = { workspace = true, features = ["extended"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
