[package]
name = "nacelle-stress-server"
version = "0.3.0-beta.3"
edition = "2024"
rust-version.workspace = true
description = "Stress server binary for exercising Nacelle TCP throughput and runtime limits."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false
keywords = ["networking", "tokio", "benchmark"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["tls-self-signed", "mimalloc-allocator"]
tls = ["nacelle/tls", "dep:tokio-rustls"]
tls-self-signed = ["tls", "nacelle/tls-self-signed"]
phase-timing = ["nacelle/phase-timing"]
mimalloc-allocator = ["dep:mimalloc", "dep:libmimalloc-sys"]

[dependencies]
nacelle = { workspace = true }
nacelle-reference-protocol = { workspace = true }
nacelle-stress-common = { workspace = true }
bytes = { workspace = true }
mimalloc = { workspace = true, optional = true }
libmimalloc-sys = { workspace = true, features = ["extended"], optional = true }
metrics = { workspace = true }
metrics-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { workspace = true, optional = true }
